fix: add margin to link button so yellow box doesn't get cut off

--- a/client/src/public/css/styles.css
+++ b/client/src/public/css/styles.css
@@ -1430,6 +1430,7 @@ code {
   color: #555555;
   background-color: #000000;
   padding: 8px;
+  margin: 8px;
   cursor: pointer;
 }
 
